--- a/demo.html
+++ b/demo.html
@@ -35,6 +35,7 @@
 		</style>
 </head>
 <body>
+	<h1>转自张鑫旭http://www.zhangxinxu.com/wordpress/2017/09/css-shapes-outside-iphone-x-head/</h1>
 	<div id="box" class="box">
 	    <i id="shape" class="shape"></i>
 	    <i class="liuhai"></i>
